--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-liste/mitglieder-liste.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-liste/mitglieder-liste.component.html
@@ -17,15 +17,25 @@
   </ion-header>
 
   <ng-container *ngIf="data$ | async as data; else loading">
+    
     <ion-list>
+      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account" (ionInput)="search($event)"></ion-searchbar>
       <app-contact-item 
-        *ngFor="let contact of data" 
+        *ngFor="let contact of displayedData" 
         [name]="contact.vorname + ' ' + contact.nachname" 
         [instruments]="contact.defaultInstrument" 
         [memberSince]="contact.memberSinceInYears?.toString()"
         [routerLink]="'details/' + contact.id">
       </app-contact-item>
+      <ng-container *ngIf="displayedData.length === 0">
+        Kein Ergebnis
+      </ng-container>
     </ion-list>
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+      <ion-fab-button class="ion-fab-button" (click)="openCreateOrchesterMitgliedModal()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </ng-container>
 
   <ng-template #loading>
