--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-liste/mitglieder-liste.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-liste/mitglieder-liste.component.html
@@ -17,14 +17,12 @@
   </ion-header>
 
   <ng-container *ngIf="data$ | async as data; else loading">
-    
     <ion-list>
-      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account" (ionInput)="search($event)"></ion-searchbar>
-      <app-contact-item 
-        *ngFor="let contact of displayedData" 
-        [name]="contact.vorname + ' ' + contact.nachname" 
-        [instruments]="contact.defaultInstrument" 
-        [memberSince]="contact.memberSinceInYears?.toString()"
+      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account"
+        (ionInput)="search($event)"></ion-searchbar>
+
+      <app-contact-item *ngFor="let contact of displayedData" [name]="contact.vorname + ' ' + contact.nachname"
+        [instruments]="contact.defaultInstrument" [memberSince]="contact.memberSinceInYears?.toString()"
         [routerLink]="'details/' + contact.id">
       </app-contact-item>
       <ng-container *ngIf="displayedData.length === 0">
