finished mitglieder functionality

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglied-admin-update-modal/mitglied-admin-update-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglied-admin-update-modal/mitglied-admin-update-modal.component.html
@@ -86,7 +86,7 @@
         </ion-item>
         <ion-item>
           <ion-select label="Positions" label-placement="stacked" [multiple]="true" formControlName="positions">
-            <ion-select-option *ngFor="let position of dropdownItemsPosition"
+            <ion-select-option *ngFor="let position of dropdownItemsPosition | filterNullDropdown"
               [value]="position.value">{{position.text}}</ion-select-option>
           </ion-select>
         </ion-item>
