--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-management/account-management.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-management/account-management.component.html
@@ -20,10 +20,16 @@
     <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
-    <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account" (ionInput)="search($event)"></ion-searchbar>
-    <app-account-card *ngFor="let accountInfo of displayedData" [routerLink]="'details/' + accountInfo.orchesterMitgliedsId"
-      [name]="accountInfo.orchesterMitgliedsName" [email]="accountInfo.email" [lastLogin]="accountInfo.lastLogin" [color]="accountInfo | getCardColor">
-    </app-account-card>
+
+    <ion-list>
+      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Account"
+        (ionInput)="search($event)"></ion-searchbar>
+
+      <app-account-item *ngFor="let accountInfo of displayedData"
+        [routerLink]="'details/' + accountInfo.orchesterMitgliedsId" [name]="accountInfo.orchesterMitgliedsName"
+        [email]="accountInfo.email" [lastLogin]="accountInfo.lastLogin"
+        [connected]="accountInfo.userId !== null"></app-account-item>
+    </ion-list>
   </ng-container>
 
   <ng-template #loading>
