--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-details/account-details.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/account-details/account-details.component.scss
@@ -12,3 +12,9 @@ ion-card-header{
   display: flex;
   justify-content: space-between;
 }
+
+.back-btn{
+  margin-top: 0px;
+  margin-bottom: 8px;
+  margin-left: 12px;
+}
