--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/presentational/account-item/account-item.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/presentational/account-item/account-item.component.html
@@ -3,8 +3,11 @@
     <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
   </ion-avatar>
   <ion-label>
-    <h2>
-      <strong>{{name}}</strong>
+    <h2 class="name">
+      <div>
+        <strong>{{name}}</strong>
+      </div>
+      <div class="user-connected" [class.color-green]="connected"></div>
     </h2>
     <ion-text style="font-size: 14px;">E-Mail: {{email ?? 'nicht angegeben'}}</ion-text><br />
     <ion-note color="medium" class="ion-text-wrap">
