added new frontend stuff

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/create-termin-modal/create-termin-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/create-termin-modal/create-termin-modal.component.html
@@ -30,7 +30,7 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-input formControlName="terminDate" type="date" labelPlacement="stacked" label="Mitglied seit" placeholder="Mitglied seit"></ion-input>
+          <ion-input formControlName="terminDate" type="date" labelPlacement="stacked" label="Datum" placeholder="Datum"></ion-input>
         </ion-item>
         <ion-item>
           <ion-input formControlName="startZeit" type="time" labelPlacement="stacked" label="Startzeit" placeholder="Startzeit"></ion-input>
